--- a/style.css
+++ b/style.css
@@ -1,13 +1,10 @@
 
-/* body
-{
-    width: 60%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
-} */
 
+
+.body{
+    background: rgb(250,250,250) !important;
+
+}
 .content{
     width: 60%;
     background-color: rgb(250,250,250);
@@ -15,34 +12,49 @@
 }
 
 .logos{
-   
-    padding: 10px;
-    margin: 20px;
-    font-family: Lobster;
+    position: relative;
+    float:left;
+    /* padding: 10px; */
+    margin-left: 10px;
     height: 30%;
 }
 .searchbar{
     position: relative;
-    padding: 10px;
-    margin: 20px;
-    
-    
+    /* padding: 10px; */
+    /* margin: 20px; */
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     color: rgb(226, 226, 226);
-    
 }
-
+/* .searchwrapper{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
 .fa-search{
-    float: left;
+    position: absolute;
+    width: 70%;
+    height: 45%;
+    text-indent: 45px;
 }
 .search{
+    width: 100%;
+    height: 100%;
     text-align: center;
     background-color: rgb(250,250,250);
     border: 1px solid rgb(226, 226, 226);
     color: rgb(226, 226, 226);
+    text-indent: 10px;
+}
+.search:focus{
+    background-color: rgb(211, 128, 176);
+    
 }
 
 .headericons{
-    margin: 10px;
+    margin-right: 10px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -50,7 +62,7 @@
 .fa-compass,
 #headerheart,
 .fa-user{
-    margin: 10px;
+    /* margin: 10px; */
     padding: 10px;
 }
 
@@ -66,38 +78,64 @@
     margin-left: 0px;
     margin-bottom: 0px;
     border: 1px solid rgb(226, 226, 226);
+    background-color: rgba(255,255,255, 1);
+    z-index: 1;
 }
-.content{
-    margin-top: 75px;
-    position: relative;
-}
+
 
 
 
 @media (min-width: 1025px) {
+    .content{
+        margin-top: 60px;
+        position: relative;
+    }
    
-    .maincontent{
+    .post1{
         position: relative;
         float: left;
         margin-left: 40px;
+        margin-right: 10px;
+        margin-top: 15px;
         width: 56%;
         height: 88%;
-        border: 1px solid black;
+        border: 1px solid rgb(226, 226, 226);
     }
 
     .sidebar{
-        
+        position: relative;
         float: left;
         width: 30%;
-        height: 300px;
+        height: 400px;
         padding: 0px;
         padding-top: 0px;
         margin: 0px;
         background-color: rgb(250,250,250);
         padding: 10px 
     }
+    .post2, .suggestions{
+        position: relative;
+        float: left;
+        margin-left: 40px;
+        margin-right: 10px;
+        margin-top: 15px;
+        width: 56%;
+        height: 88%;
+        border: 1px solid rgb(226, 226, 226);
+    }
 
-    .profile,
+    .profile {
+        float: left;
+        width: 100%;
+        height: 15%;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 0px;
+        border-bottom: 1px solid rgb(226, 226, 226);
+        margin-bottom: 10px;
+    }
+
+    
     .story1,
     .story2,
     .story3,
@@ -108,7 +146,7 @@
         width: 100%;
         height: 20%;
         margin-left: 10px;
-        margin-right: 10px;
+        margin-right: 0px;
         margin-top: 5px;
         /* border: 1px solid black; */
     }
@@ -137,7 +175,8 @@
         position: relative;
         float: left;
         height: 100%;
-        width: 30%;
+        width: 55%;
+        font-family: Arial, Helvetica, sans-serif;
     }
     .username1,
     .foobar2,
@@ -147,208 +186,416 @@
     .foobar6,
     .foobar7 {
         margin: 10px;
+        font-size: 13px;
+        font-family: Arial, Helvetica, sans-serif;
+
     }
     
     .storiesheader{
         position: relative;
         float: left;
         width: 100%;
-        height: 10%;
+        height: 7%;
         margin: auto;
-        border: 1px solid rgb(226, 226, 226);
+        padding-bottom: 0px;
+        
     }
 
     
     .storiestitle{
         float: left;
+        color: darkgrey;
+        font-size: 13px;
+        font-family: Arial, Helvetica, sans-serif;
+
     }
     .watchall{
         float: right;
+        font-size: 13px;
+        font-family: Arial, Helvetica, sans-serif;
+
     }
 
     .stories{
-        height: 70%;
+        margin-top: 0px;
+        height: 60%;
         overflow: scroll;
         clear: both;
+        border-bottom: 1px solid rgb(226, 226, 226);
     } 
+    .footer{
+        margin-top: 10px;
+        height: 15%;
+        font-size: 12px;
+        color: darkgrey;
+        font-family: Arial, Helvetica, sans-serif;
+
+    }
+
+
+    .pictureheader1,
+    .pictureheader2{
+    
+        width: 100%;
+        height: 6%;
+        display: flex;
+        align-items: center;
+        /* margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 5px; */
+        
+    
+    }
+    #user1pic,
+    #user2pic{
+        position: relative;
+        float: left;
+        width: 40px;
+        height: auto;
+        margin: 10px;
+    }
+    .user1name,
+    .user2name {
+        position: relative;
+        float: left;
+        height: 100%;
+        width: 30%;
+        font-family: Arial, Helvetica, sans-serif;
+
+    }
+    
+    .ocean,
+    .dog{
+        width: 100%;
+        height: auto;
+        float: left;
+    }
+    #ocean,
+    #dog{
+        float: left;
+        width: 100%;
+        height: auto;
+    }
+    
+    .picicons{
+        float: left;
+    }
+    #heart,
+    #comment,
+    #share{
+        float: left;
+        margin: 10px;
+    }
+    
+    .fa-bookmark{
+        margin: 10px;
+        float: right;
+    }
+    
+    .picinfo,
+    .pic2info{
+        float: left;
+        width: 100%;
+        margin-left: 10px;
+    }
+
+    .likes1,
+    .likes2{
+        float: left;
+        width: 100%;
+        font-weight: bold;
+        font-size: 13px;
+        font-family: Arial, Helvetica, sans-serif;
+
+    }
+    .usernameinfo1,
+    .usernameinfo2{
+        float: left;
+        margin-right: 10px;
+        font-weight: bold;
+        font-size: 13px;
+        font-family: Arial, Helvetica, sans-serif;
+
+    }
+    .description1,
+    .description2{
+        float: left;
+        font-size: 13px;
+        font-family: Arial, Helvetica, sans-serif;
+
+    }
+    .time1,
+    .time2{
+        float: left;
+        width: 100%;
+        color: darkgrey;
+        font-size: 12px;
+        font-family: Arial, Helvetica, sans-serif;
+
+    }
+    
+    .addcomment{
+        float: left;
+        width: 100%;
+        margin-left: 10px;
+        color: darkgrey;
+        font-size: 12px;
+        font-family: Arial, Helvetica, sans-serif;
+
+    }
 }
 
 @media (max-width: 1024px) {
+    .content{
+        display: flex;
+        flex-direction: column;
+        justify-content: center; 
+        align-items: center;
+        margin-top: 150px;
+        height: 100%;
+        position: relative;
+    }
     .sidebar{
         display: none;
     }
 
-    .maincontent{
+    .post1{
+        position: relative;
+        /* float: left;  */
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 10px;
+        width: 75%;
+        height: 88%;
+        border: 1px solid rgb(226, 226, 226);
+    }
+    .post2{
+        position: relative;
+        /* float: left;  */
         margin: auto;
-        width: 80%;
-        border: 1px solid black;
+        width: 75%;
+        height: 88%;
+        border: 1px solid rgb(226, 226, 226);
+    }
+
+    .pictureheader1,
+    .pictureheader2{
+    
+        width: 100%;
+        height: 6%;
+        display: flex;
+        align-items: center;
+        /* margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 5px; */
+        
+    
+    }
+    #user1pic,
+    #user2pic{
+        position: relative;
+        float: left;
+        width: 6%;
+        height: auto;
+        margin: 10px;
+    }
+    .user1name,
+    .user2name {
+        position: relative;
+        float: left;
+        height: 100%;
+        width: 30%;
+        font-family: Arial, Helvetica, sans-serif;
+
+    }
+    
+    .ocean,
+    .dog{
+        width: 100%;
+        height: auto;
+        float: left;
+    }
+    #ocean,
+    #dog{
+        float: left;
+        width: 100%;
+        height: auto;
+    }
+    
+    .picicons{
+        float: left;
+    }
+    #heart,
+    #comment,
+    #share{
+        float: left;
+        margin: 10px;
+    }
+    
+    .fa-bookmark{
+        margin: 10px;
+        float: right;
+    }
+    
+    .picinfo,
+    .pic2info{
+        float: left;
+        width: 100%;
+        margin-left: 10px;
+
+    }
+    .likes1,
+    .likes2{
+        float: left;
+        width: 100%;
+        font-weight: bold;
+        font-size: 13px;
+        font-family: Arial, Helvetica, sans-serif;
+
+    }
+    .usernameinfo1,
+    .usernameinfo2{
+        float: left;
+        margin-right: 10px;
+        font-weight: bold;
+        font-size: 13px;
+        font-family: Arial, Helvetica, sans-serif;
+
+    }
+    .description1,
+    .description2{
+        float: left;
+        font-size: 13px;
+        font-family: Arial, Helvetica, sans-serif;
+
+    }
+    .time1,
+    .time2{
+        float: left;
+        width: 100%;
+        color: darkgrey;
+        font-size: 12px;
+        font-family: Arial, Helvetica, sans-serif;
+
+    }
+    
+    .addcomment{
+        float: left;
+        width: 100%;
+        margin-left: 10px;
+        color: darkgrey;
+        font-size: 12px;
+        font-family: Arial, Helvetica, sans-serif;
+
+    }
+    
+    .suggestions{
+        position: relative;
+        /* float: left;  */
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10px;
+        width: 75%;
+        height: 88%;
+        border: 1px solid rgb(226, 226, 226);
     }
 }
 
-.pictureheader1{
-    
-    width: 100%;
-    height: 7%;
-    /* margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 5px; */
-    
 
-}
-#user1pic{
+
+.suggestheader{
     position: relative;
     float: left;
-    width: 40px;
-    height: auto;
-    margin: 10px;
+    width: 98%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 0px;  
 }
-.user1name {
-    position: relative;
+.suggesttitle{
     float: left;
-    height: 100%;
-    width: 30%;
-}
+    margin-left: 10px;
+    color: darkgray;
+    font-size: 13px;
+    font-family: Arial, Helvetica, sans-serif;
 
-.ocean{
-    width: 100%;
-    height: auto;
-    float: left;
 }
-#ocean{
-    float: left;
-    width: 100%;
-    height: auto;
-}
-
-.picicons{
-    float: left;
-}
-#heart,
-#comment,
-#share{
-    float: left;
-    margin: 10px;
-}
-
-.fa-bookmark{
-    margin: 10px;
+.seeall{
     float: right;
-}
+    margin-right: 10px;
+    font-size: 12px;
+    color: dodgerblue;
+    font-family: Arial, Helvetica, sans-serif;
 
-.picinfo{
-    float: left;
+}
+.suggestwrapper{
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    justify-content: center;
 }
-
-.addcomment{
-    float: left;
-    width: 100%;
-}
-
-
-
-
-/* changing width and height of 2+ elements. Width and height also changed in other sections
-table {
-    width: 70%;
-}
-th {
-    height: 30px;
-}
-
-.intro {
-    width: 100%; 
-}
-
-form textarea {
-    width: 50%;
-    height: 100px;
-}
-
-/* adding border to an element
-table, th, td {
-    border: 2px solid rgb(123, 140, 141);
-}
-
-/* adding margins and padding to 2+ elements 
-form, iframe, div{
+.suggest1box,
+.suggest2box,
+.suggest3box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin: 10px;
-    padding: 10px;
-}
-
-/* span element less than full width and center it
-.headings {
-    width: 50%;
-    margin: auto;
-    text-align: center;
-}
-
-/* box shadow added to element
-table {
-    box-shadow: 3px 3px #666666;
-}
-h1{
-    text-shadow: 1px 1px 3px #666666;
-}
-
-/* 4+ declarations for list
-ul {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 14px;
-    list-style-type: circle;
-    list-style-position: inside;
-}
-
-/* 4+ declarations for a table 
-table {
-    font-size: 14px;
-    border-collapse: collapse;
-    background-color: lightcyan;
-    text-align: center;
-    margin: auto;
-}
-
-/* 4+ declarations for a form 
-form input {
-   background-color: green;
-   color: white;
-}
-form textarea  {
-    border: 2px solid rgb(123, 140, 141);
-    background-color: lightcyan;
-    color: rgb(123, 140, 141);
-}
-
-/* fixed header bar 
-.headerbar {
-    background-color: lightcyan;
-    position: fixed;
-    top: 0;
-    width: 100%;
     margin-top: 0px;
-    margin-left: 0px;
-}
-.content{
-    margin-top: 100px;
-}
-
-/* column layout for my image-list pairs 
-img, #paragraph {
-    float: left;
-    width: 50%;
-    height: auto;
-    margin: 10px;
     padding: 10px;
-   
+    border: 1px solid rgb(226, 226, 226);
 }
-/* ul {
-    overflow: hidden;
-} 
-hr {
-    clear: left;
+.suggest1pic,
+.suggest2pic,
+.suggest3pic{
+    width: 33%;
+}
+#suggest1pic,
+#suggest2pic,
+#suggest3pic{
+    position: relative;
+    width: 100%;
+    height: auto;
+}
+.suggest1followers,
+.suggest2followers,
+.suggest3followers{
+    text-align: center;
+    color: darkgray;
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+.suggest1name,
+.suggest2name,
+.suggest3name{
+    font-weight: bold;
+    font-size: 13px;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+.followbutton1,
+.followbutton2,
+.followbutton3{
+    width: 80%;
+    margin-top: 10px;
+}
+.button1,
+.button2,
+.button3{
+    width: 100%;
+    background-color: dodgerblue;
+    border-radius: 3px;
+    color: white;
+    border-color: dodgerblue;
+    font-size: 13px;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
-/* additional stuff 
 
 
- */
+
