--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 
 
-.body{
+/* .body{
     background: rgb(250,250,250) !important;
-}
+} */
 .content{
     width: 60%;
     background-color: rgb(250,250,250);
@@ -12,29 +12,19 @@
 .logos{
     position: relative;
     float:left;
-    /* padding: 10px; */
     margin-left: 10px;
     height: 30%;
 }
 .searchbar{
     position: relative;
-    /* padding: 10px; */
-    /* margin: 20px; */
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     color: rgb(226, 226, 226);
 }
-/* .searchwrapper{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
+
 .fa-search{
-    position: absolute;
-   /* width: 70%; */
-   
+    position: absolute;   
     height: 100%;
     padding-top: 2px;
     text-indent: 40px;
@@ -62,7 +52,6 @@
 .fa-compass,
 #headerheart,
 .fa-user{
-    /* margin: 10px; */
     padding: 10px;
 }
 
@@ -88,7 +77,7 @@
 @media (min-width: 1025px) {
     .content{
         padding-top: 90px;
-        position: relative;
+        /* position: relative; */
     }
    
     .post1{
@@ -102,16 +91,16 @@
         border: 1px solid rgb(226, 226, 226);
     }
 
+    .sidebar-wrapper{
+        position: fixed;
+        width: 59%;
+    }
     .sidebar{
-        position: relative;
-        float: left;
+        float: right;
         width: 30%;
         height: 400px;
-        padding: 0px;
-        padding-top: 0px;
-        margin: 0px;
         background-color: rgb(250,250,250);
-        padding: 10px 
+        padding: 10px; 
     }
     .post2, .suggestions{
         position: relative;
@@ -148,7 +137,6 @@
         margin-left: 10px;
         margin-right: 0px;
         margin-top: 5px;
-        /* border: 1px solid black; */
     }
     #image1,
     #image2,
@@ -358,7 +346,8 @@
         height: 100%;
         position: relative;
     }
-    .sidebar{
+    .sidebar,
+    .sidebar-wrapper{
         display: none;
     }
 
